--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
             <version>4.13.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
 </project>
