arranged the emulator and simulators, flow arranges

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,11 +1,22 @@
-automationName=UiAutomator2
-AppActivity=com.jar.app.feature.home.ui.activity.HomeActivity
-platformName=Android
-app=/Users/kishanr/Downloads/base (1).apk
-appiumServerURL=http://127.0.0.1:4723/
-autoAcceptAlerts=true
+androidautomationName=UiAutomator2
+androidActivity=com.jar.app.feature.home.ui.activity.HomeActivity
+androidplatformName=Android
+androidApp=/Users/kishanr/Downloads/base (1).apk
+androidappiumServerURL=http://127.0.0.1:4723/
+androidautoAcceptAlerts=true
 phoneNumber=9999911111
 otp=123456
-udid:R3CMA02PYNK
-platformVersion:12.0
-deviceName:Samsung Note 10
+androidUDID:R3CMA02PYNK
+androidPlatformVersion:12.0
+androidDeviceName:samsung SM-N971N
+
+
+#ios capabilities config properties
+automationName=XCUITest
+uuid=6E09483F-4577-4509-8B90-374D123D3BD8
+platformName=iOS
+deviceName=iPhone 13
+bundleId=org.myjar.jar.staging
+app=/Users/kishanr/Downloads/jar-ios.app
+appiumServerURL=http://127.0.0.1:4723/
+autoAcceptAlerts=true
