--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,14 +1,14 @@
 androidautomationName=UiAutomator2
 androidActivity=com.jar.app.feature.home.ui.activity.HomeActivity
 androidplatformName=Android
-androidApp=/Users/kishanr/Downloads/base (1).apk
+androidApp=/Users/hkkarthik/Downloads/Jar Staging (1).apk
 androidappiumServerURL=http://127.0.0.1:4723/
 androidautoAcceptAlerts=true
 phoneNumber=9999911111
 otp=123456
-androidUDID:R3CMA02PYNK
-androidPlatformVersion:12.0
-androidDeviceName:samsung SM-N971N
+androidUDID:emulator-5554
+androidPlatformVersion:11
+androidDeviceName:Medium Phone API 35
 
 
 #ios capabilities config properties
