--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
     </repositories>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.5.5</version>
+        </dependency>
 
         <!-- Appium Java Client -->
         <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
