Update Daily saving

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 androidautomationName=UiAutomator2
 androidActivity=com.jar.app.feature.home.ui.activity.HomeActivity
+androidPackage="com.aso_centric.jar.staging"
 androidplatformName=Android
 androidApp=/Users/kishanr/Downloads/base (1).apk
 androidappiumServerURL=http://127.0.0.1:4723/
@@ -7,8 +8,8 @@ androidautoAcceptAlerts=true
 phoneNumber=9999911111
 otp=123456
 androidUDID:emulator-5554
-androidPlatformVersion:15.0
-androidDeviceName:Pixel 9 Pro API 35
+androidPlatformVersion:11
+androidDeviceName:emulator
 
 
 #ios capabilities config properties
