handled the flows

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,7 +2,7 @@ androidautomationName=UiAutomator2
 androidActivity=com.jar.app.feature.home.ui.activity.HomeActivity
 androidPackage="com.aso_centric.jar.staging"
 androidplatformName=Android
-androidApp=/Users/kishanr/Downloads/base (1).apk
+androidApp=/Users/kishanr/Desktop/Jar Staging.apk
 androidappiumServerURL=http://127.0.0.1:4723/
 androidautoAcceptAlerts=true
 phoneNumber=9999911111
