added implementation for IOS from same test cases

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -14,10 +14,10 @@ androidDeviceName:emulator
 
 #ios capabilities config properties
 automationName=XCUITest
-uuid=6E09483F-4577-4509-8B90-374D123D3BD8
+uuid=C4F6BA7D-78FA-480C-A644-60CF0F5C7FDE
 platformName=iOS
-deviceName=iPhone 13
+deviceName=iphone13 17.5
 bundleId=org.myjar.jar.staging
-app=/Users/kishanr/Downloads/jar-ios.app
+app=/Users/kishanr/Downloads/jar-ios 5.app
 appiumServerURL=http://127.0.0.1:4723/
 autoAcceptAlerts=true
